// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverComponentFactory getStartOverComponentForAssessments renders 1`] = `
<StartOverDropdown
  deps={Object {}}
  requirementKey="test step"
  test={6}
  testName="the title"
/>
`;

exports[`StartOverComponentFactory getStartOverComponentPropsForFastPass renders CardsUI is false => component is null 1`] = `null`;

exports[`StartOverComponentFactory getStartOverComponentPropsForFastPass renders CardsUI is true, scanResults is not null, scanning is false => component matches snapshot 1`] = `
<CustomizedActionButton
  disabled={false}
  iconProps={
    Object {
      "iconName": "Refresh",
    }
  }
  onClick={[Function]}
>
  Start over
</CustomizedActionButton>
`;

exports[`StartOverComponentFactory getStartOverComponentPropsForFastPass renders CardsUI is true, scanResults is not null, scanning is true => component matches snapshot 1`] = `
<CustomizedActionButton
  disabled={true}
  iconProps={
    Object {
      "iconName": "Refresh",
    }
  }
  onClick={[Function]}
>
  Start over
</CustomizedActionButton>
`;

exports[`StartOverComponentFactory getStartOverComponentPropsForFastPass renders CardsUI is true, scanResults is null => component is null 1`] = `null`;

exports[`StartOverComponentFactory getStartOverComponentPropsForFastPass renders CardsUI is undefined => component is null 1`] = `null`;
